# snake-game

./: .gitignore  BUILD.md  BUILD_FIXES.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT-SUMMARY.md  build-release.sh  snake-game-v1.0.0-linux-x86_64-gui.sha256  test-ci-fix.sh  test-workflow-logic.sh
.github/workflows/: ci.yml  release.yml
src/: main.cpp
src/cli/: CLIRenderer.cpp  CLIRenderer.h
src/game/: SnakeGame.cpp  SnakeGame.h
src/gui/: GUIRenderer.cpp  GUIRenderer.h
